<resources>
    <string name="app_name">Catholic Prayers</string>
    <string name="app_description">Prayers to talk with God.</string>
    <string name="title_home">Home</string>
    <string name="title_special_prayers">Special Prayers</string>
    <string name="title_simple_prayers">Simple Prayers</string>
    <string name="txt_card_special_prayers">Holy Rosary &amp; Christmas Novena</string>
    <string name="txt_card_simple_prayers">Our Father, Hail Mary, Glory Be and more</string>
    <string name="txt_card_rosary">Pray the Rosary by Mystery</string>
    <string name="txt_card_ninth">Nine days of Advent prayer</string>
    <string name="title_settings_short">Prefs</string>
    <string name="title_settings">Settings</string>
    <string name="preferences_category_general">General</string>
    <string name="preferences_language">Language</string>
    <string-array name="settings_language_values">
        <item>Default (System setting)</item>
        <item>English</item>
        <item>Spanish</item>
    </string-array>
    <string name="title_rosary">Holy Rosary</string>
    <string name="title_ninth">Christmas Novena</string>
    <string name="title_our_father">Our Father</string>
    <string name="title_hail_mary">Hail Mary</string>
    <string name="title_glory_be">Glory Be</string>
    <string name="title_fatima">Fatima Prayer</string>
    <string name="title_hail_holy_queen">Hail Holy Queen</string>
    <string name="title_st_michael_short">Prayer to St. Michael</string>
    <string name="title_st_michael_long">Prayer to Archangel St. Michael</string>
    <string name="title_magnificat">Magnificat</string>
    <string name="title_apostles_creed">Apostles\' Creed</string>
    <string name="txt_amen">Amen</string>
    <string name="txt_pray">Pray</string>
    <string name="txt_prev">Back</string>
    <string name="txt_next">Next</string>
    <string name="txt_end">End</string>
    <string name="txt_begin">Begin</string>
    <string name="txt_save">Save</string>
    <string name="txt_progress">%s of %s</string>
    <string name="txt_num">#</string>
    <string name="txt_blank"> </string>
    <string name="txt_close">X</string>
    <string name="title_welcome">¡WELCOME!</string>
    <string name="txt_welcome">
        Here we bring a little compilation with the most important catholic prayers,
        so you can keep a much closer and effective communication with the Lord.
    </string>
    <string name="txt_close_dialog">Are you sure you want to go Home?</string>
    <string name="txt_yes_choice">Yes</string>
    <string name="txt_no_choice">No</string>
    <string name="txt_our_father_1">
        Our Father, who art in heaven,\nHallowed be Thy Name.\nThy Kingdom come.\nThy Will be done, on Earth\nas it is in Heaven.
    </string>
    <string name="txt_our_father_2">
        Give us this day our daily bread.\nForgive us our trespasses,\nas we forgive those\nwho trespass against us.\nLead us not into temptation,\nbut deliver us from evil.
    </string>
    <string name="txt_hail_mary_1">
        Hail Mary, full of grace.\nThe Lord is with you;\nblessed are you among women,\nand blessed is the fruit of your womb, Jesus.
    </string>
    <string name="txt_hail_mary_2">
        Holy Mary, Mother of God\nand our Mother,\npray for us sinners,\nnow and at the hour of our death.
    </string>
    <string name="txt_glory_be_1">
        Glory be to the Father,\nand to the Son,\nand to the Holy Spirit.
    </string>
    <string name="txt_glory_be_2">
        As it was in the beginning,\nis now and always,\nand unto the ages of ages.
    </string>
    <string name="txt_hail_holy_queen_1">
        Hail Holy Queen, Mother of Mercy, our Life,\nour Sweetness, and our hope.\nTo thee we cry, poor banished children of Eve.\nTo thee we send up our sighs, mourning and\nweeping in this vale of tears.\nTurn then most gracious Advocate.\nThine eyes of mercy toward us,\nand after this, our exile, show unto us,\nthe blessed fruit of thy womb, Jesus.\nOh clement! Oh loving! Oh sweet Virgin Mary!
    </string>
    <string name="txt_hail_holy_queen_2">
        Pray for us Oh Holy Mother of God,\nThat we may be made worthy\nof the promises of Christ.
    </string>
    <string name="txt_st_michael_1">
        Saint Michael the Archangel, defend us in battle.\nBe our protection against the wickedness and snares of the devil.\nMay God rebuke him, we humbly pray.
    </string>
    <string name="txt_st_michael_2">
        And do thou, Oh Prince of the Celestial Host, by the power of God,\nthrust into hell Satan and all evil spirits\nwho wander through the world for the ruin of souls.
    </string>
    <string name="txt_magnificat_quote">(Lk 1, 46–55)</string>
    <string name="txt_magnificat_horiz">Magnificat (Lk 1, 46–55)</string>
    <string name="txt_magnificat_1">
        My soul proclaims the greatness of the Lord;\nmy spirit rejoices in God my Savior.\nFor He has looked with favor on His humble servant, and from this day all generations will call me blessed;\nthe Almighty has done great things for me.\n Holy is His Name!
    </string>
    <string name="txt_magnificat_2">
        He has mercy on those who fear Him in every generation.\nHe has shown the strength of his arm:\nHe has scattered the proud in their conceit.\nHe has cast down the mighty from their thrones, and has lifted up the humble.\nHe has filled the hungry with good things, and the rich He has sent away empty.
    </string>
    <string name="txt_magnificat_3">
        He has come to the help of His servant Israel for He has remembered his promise of mercy,\nthe promise He made to our fathers, to Abraham and his children for ever.
    </string>
    <string name="txt_apostles_creed_1">
        I believe in God, the Father almighty creator of Heaven and Earth.\nI believe in Jesus Christ, His only Son, our Lord, who was conceived\nby the Holy Spirit; born of the Virgin Mary; suffered under Pontius\nPilate; was crucified, died, and was buried. He descended into hell.\nOn the third day he rose again from the dead. He ascended into Heaven\nand is seated at the right hand of God, the Father Almighty. He will\ncome again in glory to judge the living and the dead.
    </string>
    <string name="txt_apostles_creed_2">
        I believe in the Holy Spirit, the Holy Catholic Church, the communion\nof saints, the forgiveness of sins, the resurrection of the body,\nand the life everlasting.
    </string>
    <string name="txt_fatima_1">
        Oh my Jesus, forgive us of our sins.\nSave us from the fires of hell and lead all souls into heaven,\nespecially those in most need of thy infinite Mercy.
    </string>
    <string name="txt_fatima_2">
        Mary, spiritual key of our faith,\npray for us who took refuge in you.
    </string>
    <string name="txt_fatima_3">
        Mary, mother of grace, mother of mercy,\ndefend us from the enemy and protect us,\nnow and at the hour of our death.
    </string>
    <string name="title_sign_cross">The Sign of the Cross</string>
    <string name="txt_sign_cross_1">By the sign of the cross, deliver us from our enemies, You who are our God.</string>
    <string name="txt_sign_cross_2">In the name of the Father, and of the Son, and of the Holy Spirit.</string>
    <string name="title_rosary_offering">Rosary Offering</string>
    <string name="txt_rosary_offering">(Here are the offers, requests or reasons why this Rosary is being done)</string>
    <string name="title_rosary_joyful">Joyful Mysteries</string>
    <string name="title_rosary_joyful_with_days">Joyful Mysteries (Monday and Saturday)</string>
    <string name="title_rosary_joyful_only_days">(Monday and Saturday)</string>
    <string name="txt_rosary_joyful_1">The Annunciation of the Angel and the incarnation of the Word</string>
    <string name="txt_rosary_joyful_2">Mary\'s visitation to her cousin Saint Elizabeth</string>
    <string name="txt_rosary_joyful_3">The birth of the baby Jesus in Bethlehem</string>
    <string name="txt_rosary_joyful_4">The Presentation of the Child Jesus in the Temple and the Purification of Mary</string>
    <string name="txt_rosary_joyful_5">Loss and finding of the child Jesus in the temple</string>
    <string name="title_rosary_sorrowful">Sorrowful Mysteries</string>
    <string name="title_rosary_sorrowful_with_days">Sorrowful Mysteries (Tuesday and Friday)</string>
    <string name="title_rosary_sorrowful_only_days">(Tuesday and Friday)</string>
    <string name="txt_rosary_sorrowful_1">The agony of Jesus in the Garden of Olives</string>
    <string name="txt_rosary_sorrowful_2">The bloody scourging of Jesus</string>
    <string name="txt_rosary_sorrowful_3">Jesus\' crowning with thorns</string>
    <string name="txt_rosary_sorrowful_4">Jesus with the cross on his shoulders, on the way to Calvary</string>
    <string name="txt_rosary_sorrowful_5">The crucifixion and death of Jesus</string>
    <string name="title_rosary_glorious">Glorious Mysteries</string>
    <string name="title_rosary_glorious_with_days">Glorious Mysteries (Wednesday and Sunday)</string>
    <string name="title_rosary_glorious_only_days">(Wednesday and Sunday)</string>
    <string name="txt_rosary_glorious_1">The resurrection of Jesus</string>
    <string name="txt_rosary_glorious_2">The Lord\'s Ascension into Heaven</string>
    <string name="txt_rosary_glorious_3">The coming of the Holy Spirit on Our Lady and the apostles</string>
    <string name="txt_rosary_glorious_4">Assumption of Mary into Heaven</string>
    <string name="txt_rosary_glorious_5">The coronation of Our Lady as Universal Queen of all creation</string>
    <string name="title_rosary_luminous">Luminous Mysteries</string>
    <string name="title_rosary_luminous_with_days">Luminous Mysteries (Thursday)</string>
    <string name="title_rosary_luminous_only_days">(Thursday)</string>
    <string name="txt_rosary_luminous_1">Jesus\' baptism in the Jordan River</string>
    <string name="txt_rosary_luminous_2">The realization of Jesus\' first miracle, turning water into wine at the wedding at Cana</string>
    <string name="txt_rosary_luminous_3">Jesus\' preaching, announcing the Kingdom of God and inviting conversion</string>
    <string name="txt_rosary_luminous_4">The Transfiguration of Jesus on Mount Tabor</string>
    <string name="txt_rosary_luminous_5">The institution of the Eucharist at the Last Supper</string>
    <string name="txt_rosary_choose_mystery">Choose a mystery to begin</string>
    <string name="txt_rosary_auto_mystery">Or don\'t select any of them and let us selecting the mystery for you</string>
    <string name="txt_rosary_reflection">Short reflection</string>
    <string name="txt_rosary_pause">(Pause for meditation)</string>
    <string name="title_ninth_day_1_with_days">Day 1 (December 16th)</string>
    <string name="title_ninth_day_2_with_days">Day 2 (December 17th)</string>
    <string name="title_ninth_day_3_with_days">Day 3 (December 18th)</string>
    <string name="title_ninth_day_4_with_days">Day 4 (December 19th)</string>
    <string name="title_ninth_day_5_with_days">Day 5 (December 20th)</string>
    <string name="title_ninth_day_6_with_days">Day 6 (December 21st)</string>
    <string name="title_ninth_day_7_with_days">Day 7 (December 22nd)</string>
    <string name="title_ninth_day_8_with_days">Day 8 (December 23rd)</string>
    <string name="title_ninth_day_9_with_days">Day 9 (December 24th)</string>
    <string name="txt_ninth_choose_day">Choose a day to begin</string>
    <string name="txt_ninth_auto_day">Or don\'t select any of them and let us selecting the day for you</string>
    <string name="txt_ninth_auto_day_alert">(Only applies for the corresponding days)</string>
</resources>