<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.prayers.app.activity.ninth.NinthHomeActivity">

    <TextView
        android:id="@+id/title_ninth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="@dimen/margin_left"
        android:layout_marginEnd="@dimen/margin_right"
        android:gravity="center_horizontal"
        android:paddingTop="@dimen/margin_top"
        android:text="@string/title_ninth"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_size_30" />

    <ScrollView
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/nav_buttons"
        android:layout_below="@+id/title_ninth"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_20"
            android:layout_marginRight="@dimen/margin_20"
            android:paddingTop="@dimen/margin_20"
            android:paddingBottom="@dimen/margin_20">

            <RadioGroup
                android:id="@+id/radio_days"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/txt_ninth_choose_day"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/margin_20"
                    android:text="@string/txt_ninth_choose_day"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/text_size_22" />

                <RadioButton
                    android:id="@+id/radio_day_1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/margin_10"
                    android:text="@string/title_ninth_day_1_with_days"
                    android:textSize="@dimen/text_size_15" />

                <RadioButton
                    android:id="@+id/radio_day_2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/margin_10"
                    android:text="@string/title_ninth_day_2_with_days"
                    android:textSize="@dimen/text_size_15" />

                <RadioButton
                    android:id="@+id/radio_day_3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/margin_10"
                    android:text="@string/title_ninth_day_3_with_days"
                    android:textSize="@dimen/text_size_15" />

                <RadioButton
                    android:id="@+id/radio_day_4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/margin_10"
                    android:text="@string/title_ninth_day_4_with_days"
                    android:textSize="@dimen/text_size_15" />

                <RadioButton
                    android:id="@+id/radio_day_5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/margin_10"
                    android:text="@string/title_ninth_day_5_with_days"
                    android:textSize="@dimen/text_size_15" />

                <RadioButton
                    android:id="@+id/radio_day_6"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/margin_10"
                    android:text="@string/title_ninth_day_6_with_days"
                    android:textSize="@dimen/text_size_15" />

                <RadioButton
                    android:id="@+id/radio_day_7"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/margin_10"
                    android:text="@string/title_ninth_day_7_with_days"
                    android:textSize="@dimen/text_size_15" />

                <RadioButton
                    android:id="@+id/radio_day_8"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/margin_10"
                    android:text="@string/title_ninth_day_8_with_days"
                    android:textSize="@dimen/text_size_15" />

                <RadioButton
                    android:id="@+id/radio_day_9"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/margin_10"
                    android:text="@string/title_ninth_day_9_with_days"
                    android:textSize="@dimen/text_size_15" />

                <TextView
                    android:id="@+id/txt_ninth_auto_day"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/margin_40"
                    android:text="@string/txt_ninth_auto_day"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/text_size_18" />

                <TextView
                    android:id="@+id/txt_ninth_auto_day_alert"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/margin_5"
                    android:text="@string/txt_ninth_auto_day_alert"
                    android:textAlignment="center"
                    android:textSize="@dimen/text_size_10"
                    android:textStyle="italic" />
            </RadioGroup>
        </RelativeLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/ninth_background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:alpha="0.2"
        android:paddingTop="@dimen/margin_50"
        app:srcCompat="@mipmap/lights_wrath_2_vert" />

    <Button
        android:id="@+id/btn_home"
        android:layout_width="@dimen/width_close_40"
        android:layout_height="@dimen/height_close_40"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/round"
        android:paddingLeft="@dimen/button_padding"
        android:paddingRight="@dimen/button_padding"
        android:text="@string/txt_close"
        android:textColor="@color/colorText"
        android:textSize="@dimen/close_text_size_20" />

    <LinearLayout
        android:id="@+id/nav_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_prev"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round"
                android:paddingLeft="@dimen/button_padding"
                android:paddingRight="@dimen/button_padding"
                android:text="@string/txt_prev"
                android:textColor="@color/colorText"
                android:textSize="@dimen/text_size_12" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_begin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round"
                android:paddingLeft="@dimen/button_padding"
                android:paddingRight="@dimen/button_padding"
                android:text="@string/txt_begin"
                android:textColor="@color/colorText"
                android:textSize="@dimen/text_size_12" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>