<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/margin_20"
    android:layout_marginRight="@dimen/margin_20"
    android:paddingTop="@dimen/margin_60"
    android:paddingBottom="@dimen/margin_40">

    <TextView
        android:id="@+id/txt_our_father_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:text="@string/txt_our_father_1"
        android:textSize="@dimen/text_size_20" />

    <TextView
        android:id="@+id/txt_our_father_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_our_father_1"
        android:paddingTop="@dimen/margin_60"
        android:text="@string/txt_our_father_2"
        android:textSize="@dimen/text_size_20" />

    <TextView
        android:id="@+id/lbl_amen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_our_father_2"
        android:layout_centerHorizontal="true"
        android:paddingTop="@dimen/margin_60"
        android:text="@string/txt_amen"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_size_30" />
</RelativeLayout>
